2001-05-16 Wednesday 12:08  ml

	* fidoconf.h (1.70), line.c (1.250): fixed parsing forwardpkts

2001-05-11 Friday 16:38  wulf.krueger

	* TODO (1.56), fidoconf.h (1.69), line.c (1.249), tokens.h (1.10),
	tparser.c (1.146): 
	Modified Files: 	TODO fidoconf.h line.c tokens.h tparser.c
	-------------------------------------------------------------------
	-- - Implemented keyword "FileFixFSC87Subset" for htick. Not yet
	properly documented since IMHO there have to be major changes
	regarding the whole htick documentation which I will do during the
	next days.

2001-05-08 Tuesday 00:42  tobi

	* line.c (1.248), syslogp.h (1.1): fixed syslogging for sun

2001-05-08 Tuesday 00:01  tobi

	* dirlayer.c (1.5): remove warning about empty source file with gcc
	and -pedantic

2001-05-08 Tuesday 00:01  tobi

	* makefile.bcd (1.11): -DNOSEMAPHORES for Turbo C

2001-05-06 Sunday 21:52  ml

	* TODO (1.55), tparser.c (1.145): cbaName small fix

2001-05-05 Saturday 23:33  tobi

	* doc/proposal.texi (1.127): updated doc with description of the
	reqidxDir keyword

2001-05-05 Saturday 23:26  tobi

	* fidoconf.h (1.68), line.c (1.247), tokens.h (1.9), tparser.c
	(1.144), doc/Makefile (1.14), doc/proposal.texi (1.126):
	implemented some keywords for herp, in particular    syslogfacility
	(this one may also be used by other husky programs that can use
	syslogd logging in the future) and    reqidxdir herp is the husky
	request processor, which has not yet been released, but will use
	stable fidoconfig when it will be released later-on.

2001-05-05 Saturday 12:12  ml

	* fidoconf.c (1.49), fidoconf.h (1.67), line.c (1.246), tokens.h
	(1.8), tparser.c (1.143), doc/keywords.hpt (1.9): new areafixnames
	token for hpt

2001-05-05 Saturday 10:50  ml

	* fidoconf.h (1.66), line.c (1.245), tokens.h (1.7), tparser.c
	(1.142), doc/keywords.hpt (1.8): new token advisorylock for hpt

2001-05-03 Thursday 21:40  ml

	* fidoconf.c (1.48), line.c (1.244), tparser.c (1.141): patch from